# data-crm-reinforcement

./: Dockerfile.dockerfile  env_logic.py  inference.py  main.py  openenv.yaml  pyproject.toml  readme.md  readme.txt  requirements.txt  validate-submission.ps1  validate-submission.sh
data_crm_reinforcement.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: app.py  env_logic.py  models.py
