[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-crm-reinforcement"
version = "0.1.0"
description = "DataScan CRM Reinforcement Learning Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "python-dotenv",
    "requests"
]

[tool.setuptools]
packages = ["."]